plugins {
    id 'java'
}

group 'org.go.together'
version '1.0.1.SNAPSHOT'

sourceCompatibility = 13
targetCompatibility = 13

repositories {
    mavenCentral()
}

dependencies {
    compile (
            "org.springframework.boot:spring-boot-starter-web:${springBootVersion}",
            "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}",
            "org.springframework.boot:spring-boot-starter-test:${springBootVersion}",
            "org.junit.jupiter:junit-jupiter-engine:5.2.0",

            "org.projectlombok:lombok:${lombokVersion}",
            "com.google.guava:guava:${guavaVersion}",
            "com.h2database:h2",

            'org.apache.commons:commons-lang3:3.9'
    )
    compile project(":repository-service")
    compile project(":notification-service-client")

    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

test {
    useJUnitPlatform()
}